Fixed a bug where the question would appear behind the navbar on the player questions screen.

--- a/src/app/player/quiz/quiz.component.scss
+++ b/src/app/player/quiz/quiz.component.scss
@@ -1,3 +1,8 @@
+main {
+  margin-top: 50px;
+}
+
+
 h2 {
   padding: 10px;
 }
